1. 2019-03-21 (v1.0)
 Release of PRIDE-PPPAR v1.0

2. 2019-04-03 (v1.1)
 - Small bug fixing
 - RINEX-3 support
 - Fixed bug for high-rate computation
 - Support Linux-32 system (src/lib/shard/linux-32)
 - Support Mac OS system (src/lib/shard/mac)

3. 2019-05-01 (v1.2)
 - Support VMF1

4. 2019-05-23 (v1.3)
 - Auto-selection of IGS ATX
 - Change SP3 from COD to WHU since 2019

5. 2019-06-01 (v1.3)
 - Add src/utils/xyz2enu